force-app/main/default/objects/Kerridge_Order__c/Kerridge_Order__c.object-meta.xml
<CustomObject>
    <label>Kerridge Order</label>
    <nameField>
        <label>Kerridge Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kerridge Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>