force-app/main/default/objects/Kerridge_Order__c/fields/Amount_on_Order__c.field-meta.xml
<CustomField>
    <fullName>Amount_on_Order__c</fullName>
    <label>Amount on Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>