force-app/main/default/objects/Kerridge_Order__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Kerridge Orders</relationshipLabel>
    <relationshipName>Kerridge_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>