force-app/main/default/objects/Kerridge_Order__c/fields/Date_created_in_Kerridge__c.field-meta.xml
<CustomField>
    <fullName>Date_created_in_Kerridge__c</fullName>
    <label>Date created in Kerridge</label>
    <type>DateTime</type>
</CustomField>