force-app/main/default/objects/Kerridge_Order__c/fields/Date_last_modified_in_Kerridge__c.field-meta.xml
<CustomField>
    <fullName>Date_last_modified_in_Kerridge__c</fullName>
    <label>Date last modified in Kerridge</label>
    <type>DateTime</type>
</CustomField>