force-app/main/default/objects/Kerridge_Order__c/fields/Kerridge_Account__c.field-meta.xml
<CustomField>
    <fullName>Kerridge_Account__c</fullName>
    <label>Kerridge Account #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>