force-app/main/default/objects/Kerridge_Order__c/fields/Kerridge_Order__c.field-meta.xml
<CustomField>
    <fullName>Kerridge_Order__c</fullName>
    <externalId>true</externalId>
    <label>Kerridge Order #</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>