force-app/main/default/objects/Kerridge_Order__c/fields/Kerridge_SS__c.field-meta.xml
<CustomField>
    <fullName>Kerridge_SS__c</fullName>
    <label>Kerridge SS #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>