force-app/main/default/objects/Kerridge_Order__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Kerridge Orders</relationshipLabel>
    <relationshipName>Kerridge_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>