force-app/main/default/objects/Kerridge_Order__c/fields/Order_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_External_Id__c</fullName>
    <label>Order External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>