force-app/main/default/objects/Kerridge_Order__c/fields/Selection_Sheet_ID__c.field-meta.xml
<CustomField>
    <fullName>Selection_Sheet_ID__c</fullName>
    <label>Selection Sheet ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>